tests/negative/typecheck/if-optional.orng
fn main() -> Int
    let x: Int = if true {1}
    0